--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Bernd's Blog</h1>
+            <h1>Bernd's Blog {{ test_key }}</h1>
             <span class="subheading">A collection of random musings.</span>
           </div>
         </div>
