--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 {% include "header.html" %}
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1470092306007-055b6797ca72?ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80')">
+  <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/family.jpg')}}')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Bernd's Blog {{ test_key }}</h1>
-            <span class="subheading">A collection of random musings.</span>
+            <h1>Kappi Reise Blog </h1>
+            <span class="subheading">Wir teilen hier unsere Reiseberichte, los gehts!</span>
           </div>
         </div>
       </div>
