--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
             </h3>
           </a>
           <p class="post-meta">Posted by
-            <a href="#">{{ post.author.name }}</a>
+            <a href="#"> {{ post.author.name }} </a>
             on {{post.date}}
-            {% if current_user.id == 1 %}
+            {% if current_user.id == post.author.id %}
             <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
             {% endif %}
           
@@ -44,7 +44,7 @@
 
         <!-- New Post -->
         <div class="clearfix">
-          {% if current_user.id == 1 %}
+          {% if current_user.id in admin_list %}
           <a class="btn btn-primary float-right" href="{{url_for('add_new_post')}}">Create New Post</a>
           {% endif %}
         </div>
