--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Ann-Cathrin studiert in Nante</p>
+        <p>Ann-Cathrin studiert in Nantes</p>
         <p>Basti studiert in Toronto</p>
         <p>Ingeborg und Bernd reisen mit dem WoMo</p>
       </div>
